[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "reliable-webhook-service"
version = "0.1.0"
description = "A reliable webhook delivery service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1,<2",
    "fastapi",
    "pydantic-settings>=2,<3",
    "psycopg[binary]>=3,<4",
    "SQLAlchemy>=2,<3",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "httpx2",
    "mypy",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
